[package]
name = "wf-cdk-bindgen"
version = "0.1.6"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
rust-version = "1.78.0"
license = "Apache-2.0"
repository = "https://github.com/wasm-forge/wf-cdk-bindgen"

description = "Internet Computer Binding Generator."
readme = "README.md"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["internet-computer", "types", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
candid = "0.10.4"
candid_parser = "0.1.4"
convert_case = "0.6"
pretty = "0.12"
