[package]
name = "wf-cdk-bindgen"
version = "0.1.7"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
rust-version = "1.78.0"
license = "Apache-2.0"
repository = "https://github.com/wasm-forge/wf-cdk-bindgen"

description = "Internet Computer Binding Generator."
readme = "README.md"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["internet-computer", "types", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
candid = "0.10.16"
candid_parser = "0.2.1"
convert_case = "0.7"
pretty = "0.12"
